--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,10 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+cryptography==41.0.4
+defusedxml==0.7.1
 Django==4.2.5
+django-allauth==0.57.0
 idna==3.4
 joblib==1.3.2
 kombu==5.3.2
@@ -20,7 +23,10 @@ oauthlib==3.2.2
 Pillow==10.0.1
 prompt-toolkit==3.0.39
 pycparser==2.21
+PyJWT==2.8.0
 python-dateutil==2.8.2
+python-decouple==3.8
+python3-openid==3.2.0
 regex==2023.8.8
 requests==2.31.0
 requests-oauthlib==1.3.1
